Fix 6065 - Tighten up the breakpoint spacing

--- a/src/components/SecondaryPanes/Breakpoints.css
+++ b/src/components/SecondaryPanes/Breakpoints.css
@@ -29,6 +29,11 @@
   padding: 0.5em 1em 0.5em 0.5em;
 }
 
+.breakpoints-list .breakpoint {
+    padding-top: 0.25em;
+    padding-bottom: 0.25em;
+}
+
 .breakpoints-exceptions-caught {
   padding: 0 1em 0.5em 2em;
 }
